# VkForge

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTION.md  FUNDING.yml  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  REFERENCE.md  TODO.md  pyproject.toml
examples/basic/: frag.frag  main.c  vert.vert  vkforge.yml
examples/quad/: bash.sh  entity.h  main.c  shader.vert  vkforge.yml
examples/quad/VkForge/: CMakeLists.txt  vkforge_core.c  vkforge_funcdecls.h  vkforge_layout.c  vkforge_pipelines.c  vkforge_typedecls.h  vkforge_utils.c
examples/texture/: CxFileCopy.cmake  VKFORGE.yml  main.c
examples/texture/VkForge/: CMakeLists.txt  vkforge_core.c  vkforge_funcdecls.h  vkforge_layout.c  vkforge_pipelines.c  vkforge_typedecls.h  vkforge_utils.c
examples/texture2/: CMakeLists.txt  VKFORGE.yml  bash.sh  entity.h  main.c  shader.frag  shader.vert
examples/texture2/VkForge/: vkforge_core.c  vkforge_layout.c  vkforge_layout.h  vkforge_pipelines.c  vkforge_pipelines.h  vkforge_typedecls.h  vkforge_utils.c
scripts/: format.py  input.txt  test.c
scripts/layout/: vkforge_layout.c  vkforge_layout.h
src/vkforge/: __init__.py  cli.py  context.py  designer.py  layout.py  mappings.py  schema.py  shader.py  writer.py
src/vkforge/translators/: __init__.py  cmake.py  common.py  core.py  create_translators.py  func.py  layout.py  pipeline.py  platform.py  render.py  type.py  type_translators.py  types.py  util.py  (+2 more)
tests/: optimized_layout.py  test_forge.py
tests/config/: bash.sh  default.frag  different.frag  different.vert  test2.vert  vert.vert  vkforge.yml
tests/simple/: default.vert  vkforge.yml
(+8 files in other folders)
